# BoreFlow

./: .gitignore  MANIFEST.in  README.md  index.md  optional_requirements.txt  requirements.txt  setup.cfg  setup.py
BoreFlow/: __init__.py  background_dictionaries.py  ben_mather_heat_flow_functions.py  boreflow.py  boreholehandler.py  climate_functions.py  climatic_correction_functions.py  general_python_functions.py  load_and_pass_data.py  load_example_data.py  plotting_functions.py  process_climate_histories.py
BoreFlow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
BoreFlow/borehole_modules/: ben_mather_heat_flow_functions.py  general_python_functions.py  heat_flow_functions.py  load_and_pass_data.py  monte_carlo_sampling.py  plotting_functions.py  process_climate_histories.py
BoreFlow_nonobject/: heat_flow_functions.py  load_and_pass_data.py  monte_carlo_sampling.py  temp_script_writing.py
examples/: Untitled.ipynb  Untitled1.ipynb  ex1_config.yaml  run_borehole_analysis.ipynb  run_borehole_analysis_object.ipynb
examples/example1/: Example1.ipynb  example1_config.yaml
examples/example1/example1_data/: silloth_no2_temps.xlsx
examples/example_data/thermal_conductivity_compilations_data/: rollin1987_unit_plot_dict.xlsx  thermal_conductivity_lookup_dictionary.xlsx  thermal_conductivity_tabulations_british.xlsx  thermal_conductivity_tabulations_global.xlsx  unit_lith_cermak1982_plot_dict.xlsx
paper/: paper.bib  paper.md
pip-wheel-metadata/BoreFlow.dist-info/: METADATA
(+166 files in other folders)
